tests/error/type_match/typename_base_type_mismatched_type.bz
// error: couldn't match the function call to the function
// note: function argument types are '<error-type>'
// note: candidate: 'function test1(T: [typename, i32]) -> void'
function test1(T: [typename, i32]);

function test()
{
	test1([i32, i64]);
}
